--- a/frontend/src/CMS/Course/GeneralStyles.scss
+++ b/frontend/src/CMS/Course/GeneralStyles.scss
@@ -12,7 +12,6 @@
     background-color: rgb(150, 255, 255);
     width: 200px;
     flex-shrink: 0;
-    height: max-content;
 }
 
 .sidebar-item{
@@ -37,6 +36,7 @@
 .info-list{
     text-align: left;
     gap: 50px 20px;
+    width: 100%;
 }
 
 .download-link{
@@ -49,4 +49,36 @@ button{
     border-radius: 20px;
     border-color: rgb(255, 217, 147);
     box-shadow: 0.5px 0.5px 0.5px grey;
+    text-wrap: nowrap
+}
+
+.public-DraftStyleDefault-ltr{
+    text-align: unset !important;
+}
+
+.react-file-reader{
+    display: inline;
+    width: min-content;
+}
+
+.react-file-reader-button{
+    display: inline;
+    width: min-content;
+}
+
+.centered{
+    width: 100%;
+}
+
+
+.assignment{
+    border: solid;
+    border-width: 25%;
+    border-color: lightgrey;
+}
+
+.block{
+    border: solid;
+    border-width: 25%;
+    border-color: lightgrey;
 }
