changes for saving multiple pitch art versions

--- a/frontend/src/Create/CreatePitchArt.scss
+++ b/frontend/src/Create/CreatePitchArt.scss
@@ -168,8 +168,15 @@
   position: fixed;
   right: 40px;
   min-width: 200px;
-  margin-top: 50px;
+  margin-top: 100px;
   //padding: 20px;
+}
+
+.versions {
+  position: fixed;
+  right: 40px;
+  min-width: 200px;
+  margin-top: 50px;
 }
 
 .StopShare {
