--- a/frontend/src/CMS/Course/GeneralStyles.scss
+++ b/frontend/src/CMS/Course/GeneralStyles.scss
@@ -238,7 +238,7 @@ img.rdw-link-decorator-icon {
     display: none;
 }
 
-.word-card{
+.lesson-word-card{
     width: 350px;
     margin-right: 10px;
 }
