--- a/frontend/src/CMS/Course/GeneralStyles.scss
+++ b/frontend/src/CMS/Course/GeneralStyles.scss
@@ -32,8 +32,12 @@
 }
 
 .download-link{
-    color: rgb(111, 111, 255);
+    color: rgb(61, 61, 255);
     cursor: pointer;
+}
+
+a>span{
+    color: rgb(61, 61, 255) !important;
 }
 
 .public-DraftStyleDefault-ltr{
