--- a/frontend/src/Notifications/SendMessagePopUp.scss
+++ b/frontend/src/Notifications/SendMessagePopUp.scss
@@ -1,24 +1,4 @@
-.sent-content{
-    display: flex;
-    flex-direction: column;
 
-    input[type="checkbox"] {
-        position: relative;
-        opacity: 1;
-        display: block;
-        pointer-events: all;
-    
-    }
-
-    .checkbox {
-        width:10%;
-    }
-
-    .message{
-        cursor: pointer;
-    }
-
-}
 .send-msg-modal{
     display: flex;
     flex-direction: column;
@@ -27,6 +7,28 @@
         text-align: center;
     }
     .send-msg-modal-content{
+        .tab-container {
+            display: flex;
+            border-bottom: 1px solid #ccc;
+        }
+        
+        .tab-button {
+            background-color: #f2f2f2;
+            border: none;
+            outline: none;
+            cursor: pointer;
+            padding: 10px 20px;
+            transition: background-color 0.3s ease;
+        }
+        
+        .tab-button.active {
+            background-color: #ccc;
+        }
+        
+        .tab-content {
+            // padding: 20px;
+            border: 1px solid #ccc;
+        }
         .users-dropdown{
             display: flex;
             margin-bottom: 10px;
@@ -63,11 +65,4 @@
         }
     }
 
-}
-
-
-.show-message-modal{
-    .dialog-title{
-        text-align: center;
-    }
 }
