--- a/frontend/src/Authentication/landing.scss
+++ b/frontend/src/Authentication/landing.scss
@@ -1,14 +1,20 @@
-.metilda_Logo {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-  max-width: 100%;
-  height: auto;
-  border: 2px solid maroon;
-  border-radius: 8px;
-}
+// // .metilda_Logo {
+// //   display: block;
+// //   margin-left: auto;
+// //   margin-right: auto;
+// //   width: 50%;
+// //   max-width: 100%;
+// //   height: auto;
+// //   border: 2px solid maroon;
+// //   border-radius: 8px;
+// // }
 
+
+.para {
+   text-align: left;
+   margin-left: 25px;
+   color: brown; 
+}
 .login_Button {
   width: 10%;
   background-color: #ee6e73;
@@ -25,23 +31,15 @@
   background-color: #e0363c;
 }
 
-h3 {
-  color: rgb(185, 54, 54);
-  font-size: 30pt;
-}
+// @media (max-width: 1025px) {
+//   .login_Button {
+//     width: 25%;
+//   }
+// }
 
-@media (max-width: 1025px) {
-  .login_Button {
-    width: 25%;
-  }
-}
+// @media (max-width: 1025px) {
+//   .login_Button {
+//     width: 40%;
+//   }
+// }
 
-@media (max-width: 1025px) {
-  .login_Button {
-    width: 40%;
-  }
-}
-
-.para {
-  text-align: left;
-  margin-left: 25px; }
