--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -116,9 +116,10 @@ label{
     margin-top: 8px;
 }
 
-// .globalbtn{
-//     color: #000000;
-// }
+.globalbtn {
+  padding: 10px 20px; /* Adjust values as needed */
+  white-space: nowrap; /* Prevent text from wrapping */
+}
 
 h1{
   color: #b93636;
